--- a/advisory-service/pom.xml
+++ b/advisory-service/pom.xml
@@ -7,21 +7,22 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>advisory-service</name>
     <description>advisory-service</description>
+    <parent>
+        <groupId>com.chinasoft</groupId>
+        <artifactId>private-bank</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.6.13</spring-boot.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
         </dependency>
 
         <dependency>
