--- a/advisory-service/src/main/resources/application.yml
+++ b/advisory-service/src/main/resources/application.yml
@@ -1,19 +1,19 @@
 server:
   port: 9004
   servlet:
-    context-path: /api/advisory
+#    context-path: /api/advisory
 spring:
   application:
     name: advisory-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.3.126:3306/private_bank?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.3.126:3306/private_bank?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: zyx
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:9001/eureka
-  instance:
-    prefer-ip-address: true
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:9001/eureka
+#  instance:
+#    prefer-ip-address: true
